benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_Compare_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Compare.rs
Time: 2025-09-15 20:20:17

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: prefix `s1` is unknown
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_Compare_impl.rs:33:13
   |
33 |         let s1' = s1.subrange(0, s1.len() as int - 1);
   |             ^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
33 |         let s1 ' = s1.subrange(0, s1.len() as int - 1);
   |               +

error[E0762]: unterminated character literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_Compare_impl.rs:33:15
   |
33 |         let s1' = s1.subrange(0, s1.len() as int - 1);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0762`.

--------------------------------------------------------------------------------

Additional Output:
error: prefix `s1` is unknown
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_Compare_impl.rs:33:13
   |
33 |         let s1' = s1.subrange(0, s1.len() as int - 1);
   |             ^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
33 |         let s1 ' = s1.subrange(0, s1.len() as int - 1);
   |               +

error[E0762]: unterminated character literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_Compare_impl.rs:33:15
   |
33 |         let s1' = s1.subrange(0, s1.len() as int - 1);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0762`.
